# gdesklets

./: .bzrignore  .cvsignore  .gitignore  AUTHORS  ChangeLog  ChangeLog.pre0.34  MAINTAINERS  Makefile.am  Makefile_basicdesklets.am  Makefile_gdesklets.am  Makefile_python.am  NEWS  README  TODO  autogen.sh  compile  configure.ac  configure.in  ctrlinfo  gdesklets  gdesklets-daemon  gdesklets-logview  gdesklets-shell  gdesklets.appdata.xml  gdesklets.spec  test-control.py
Controls/: Makefile.am
Controls/ArrayBuffer/: IArrayBuffer.py  Makefile.am  __init__.py
Controls/Calendar/: ICalendar.py  Makefile.am  __init__.py
Controls/EventPipe/: IEventPipe.py  Makefile.am  __init__.py
Controls/HDDTemp/: IHDDTemp.py  Makefile.am  __init__.py  impl.py
Controls/PopUp/: IPopUp.py  Makefile.am  __init__.py
Controls/Random/: IRandom.py  Makefile.am  __init__.py
Controls/Sensor/: ISensor.py  Makefile.am  __init__.py
Controls/System/: ISystem.py  Makefile.am  __init__.py
Controls/Time/: ITime.py  Makefile.am  __init__.py
Controls/URI/: .cvsignore  IURI.py  Makefile.am  __init__.py
Controls/iCalendarEvent/: CalDAVbackend.py  IiCalendarEvent.py  __init__.py  events.py  iCalendarBackend.py  myProduct.py
Sensors/: Makefile.am
config/: Backend.py  ConfigBoolean.py  ConfigButton.py  ConfigColor.py  ConfigDPI.py  ConfigDate.py  ConfigDialog.py  ConfigEnum.py  ConfigFloat.py  ConfigFont.py  ConfigInfo.py  ConfigInteger.py  ConfigKeyBinding.py  ConfigList.py  ConfigManager.py  ConfigRadio.py  ConfigString.py  ConfigTitle.py  ConfigToggle.py  ConfigURI.py  ConfigUnit.py  ConfigWidget.py  DaemonConfigger.py  DisplayConfigger.py  Makefile.am  StateSaver.py  settings.py  settings.py.in
contrib/: gdesklets-migration-tool
data/: .bzrignore  Makefile.am  about.xcf  gdesklets.desktop.in  gdesklets.xml.in
desklets-SideCandy/: ChangeLog  README
desklets-basic/: README
dev/: ChangeLog  HACKING  controlproducer.py  ewmh.py  utmp.c
develbook/: .gitignore  ChangeLog  ChangeLog.pre0.35.4  README  admin-displays.xml  admin.xml  apdx-cursors.xml  apdx-datatypes.xml  apdx-features.xml  book.xml  ctrl-included.xml  ctrl-interface.xml  ctrl-use.xml  ctrl-write.xml  dsp-about.xml  dsp-tag-array.xml  dsp-tag-canvas.xml  dsp-tag-common.xml  dsp-tag-control.xml  dsp-tag-display.xml  dsp-tag-entry.xml  dsp-tag-gauge.xml  dsp-tag-general.xml  dsp-tag-image.xml  dsp-tag-label.xml  dsp-tag-plotter.xml  dsp-tag-script.xml  dsp.xml  framework-daemon.xml  framework-overview.xml  framework.xml  history.xml  info.xml  layout-mistakes.xml  layout-relative.xml  layout-units.xml  layout.xml  libdesklets.xml  make-html.sh  meta.xml  (+27 more)
display/: ContainerTarget.py  DataTarget.py  Display.py  DisplayConfigurator.py  DisplayTarget.py  GlassWindow.py  Layouter.py  Makefile.am  MenuItem.py  Plug.py  TargetAlignment.py  TargetArray.py  TargetBonoboControl.py  TargetCanvas.py  TargetDisplay.py  TargetEntry.py  TargetExpander.py  TargetFrame.py  TargetGauge.py  TargetGroup.py  TargetGroup2.py  TargetImage.py  TargetLabel.py  TargetMenu.py  TargetMenuItem.py  TargetPlotter.py  Window.py  targetregistry.py
doc/: Arrays.txt  ChangeLog  Geometry.txt  InlineScripting.txt  InlineScriptingUser.txt  Makefile.am  Observers.txt  Properties.txt  RestrictedScripts.txt  Socket.txt  UserInteraction.txt
factory/: ControlFactory.py  DisplayFactory.py  Makefile.am  SensorFactory.py
layout/: HashPQueue.py  LayoutObject.py  Makefile.am  Unit.py
libdesklets/: ChangeLog  Makefile.am  __init__.py  convert.py  hddtemp.py
libdesklets/system/: .cvsignore  Arch.py  ArchFactory.py  CPU.py  Device.py  Makefile.am  Net.py  Swap.py  __init__.py  gtop.c
libdesklets/system/FreeBSD/: Generic.py  Makefile.am
libdesklets/system/Linux/: Generic.py  Makefile.am  PPC.py  Sparc.py  X86.py  __init__.py
libdesklets/system/NetBSD/: Generic.py  Makefile.am  __init__.py
libdesklets/system/OpenBSD/: Generic.py  Makefile.am
libdesklets/system/Solaris/: Generic.py  Makefile.am  Sparc.py  X86.py  __init__.py
libdesklets/system/Windows/: Win32.py  __init__.py
macros/: Makefile.am  python-include.m4
main/: AboutDialog.py  Control.py  DisplayList.py  LoadingFeedback.py  Makefile.am  MetaData.py  RemoteSocket.py  Starter.py  TrayIcon.py  __init__.py  client.py  remotecommands.py  transition.py
plugin/: ControlRegistry.py  Interface.py  Makefile.am  Permission.py  PluginRegistry.py
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  README  ar.po  az.po  bg.po  bn.po  bs.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  es.po  (+46 more)
scripting/: ControlWrapper.py  ElementWrapper.py  Makefile.am  PropertyArray.py  PropertyInterface.py  Script.py  Scriptlet.py  Vault.py
shell/plugins/: Makefile.am
shell/plugins/ControlBrowser/: ControlInspector.py  Makefile.am  __init__.py
shell/plugins/ControlCollection/: Makefile.am  __init__.py
shell/plugins/ControlsView/: Makefile.am  __init__.py
shell/plugins/DisplayBrowser/: Makefile.am  __init__.py
shell/plugins/DisplayCollection/: Makefile.am  __init__.py
shell/plugins/DisplayView/: Makefile.am  __init__.py
shell/plugins/Help/: Makefile.am  TipOfTheDay.py  __init__.py  tips.py
shell/plugins/Menu/: Makefile.am  __init__.py
shell/plugins/PackageInstaller/: Downloader.py  Makefile.am  Package.py  __init__.py
shell/plugins/Profiles/: Makefile.am  __init__.py
shell/plugins/Shell/: Makefile.am  __init__.py
shell/plugins/StatusBar/: Makefile.am  __init__.py
shell/plugins/ViewSwitch/: Makefile.am  __init__.py
shell/plugins/gDeskletsClient/: Makefile.am  __init__.py
utils/: .cvsignore  BGWatcher.py  BinTree.py  DOM.py  Element.py  ErrorFormatter.py  HIGDialog.py  KeyBinding.py  LogView.py  Makefile.am  MetaDataRegistry.py  Observable.py  QueryParser.py  Struct.py  TargetSettings.py  Trie.py  UpdateChecker.py  WindowSnapper.py  __init__.py  actionparser.py  datatypes.py  dialog.py  eggtrayicon.c  error.py  filter.c  filter.h  i18n.py  logger.py  pwstore.py  render.c  render.h  svg.c  systray.c  tiling.c  typeconverter.py  utils.c  utils.h  vfs.py  wallpaper.py  x11.c  (+1 more)
(+152 files in other folders)
