dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.53)
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(gDesklets, 0.36beta, http://bugzilla.gnome.org/enter_bug.cgi?product=gDesklets)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

dnl Required programs
AC_PROG_CC
AC_HEADER_STDC
AC_DISABLE_STATIC
AC_PROG_INTLTOOL
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_PROG_LN_S
AC_PROG_MAKE_SET

CFLAGS="-Os -g"

AC_ARG_ENABLE(debug,[  --enable-debug  Maximum debugging],
              set_debug="$enableval",[set_debug=no])
AC_MSG_CHECKING(for more debugging including macro expansion)
if test "$GCC" = "yes" -a "$set_debug" != "no"; then
  AC_MSG_RESULT(yes)
  CFLAGS="-O0 -g3"
else
  AC_MSG_RESULT(no)
fi

AC_ARG_ENABLE(more-warnings,[  --enable-more-warnings  More compiler warnings],
              set_more_warnings="$enableval",[set_more_warnings=no])

AC_MSG_CHECKING(for more warnings, including -Werror)
if test "$GCC" = "yes" -a "$set_more_warnings" != "no"; then
    AC_MSG_RESULT(yes)
    CFLAGS="\
    -Wall -Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes \
    -Wmissing-declarations -Wredundant-decls -Wunreachable-code \
    -Wpointer-arith -Wcast-align -Wsign-compare -ansi \
    "
else
    AC_MSG_RESULT(no)
fi

AM_PATH_PYTHON([2.3])
PYTHON_PREFIX=`python -c "import sys; print sys.prefix"`
PYTHON_CFLAGS="-I$PYTHON_PREFIX/include/python$PYTHON_VERSION"
AC_CHECK_HEADER([$PYTHON_PREFIX/include/python$PYTHON_VERSION/Python.h],,
    AC_ERROR([Can't find Python.h! You will need python's development package to compile gDesklets.]))
AC_SUBST(PYTHON_CFLAGS)

PKG_CHECK_MODULES(GDESKLETS, pygtk-2.0 >= 2.10.0 pyorbit-2 >= 2.0.1 gnome-python-2.0 >= 2.12.0)
AC_SUBST(GDESKLETS_CFLAGS)
AC_SUBST(GDESKLETS_LIBS)

PKG_CHECK_MODULES(UTILS, glib-2.0 >= 2.10.0 gtk+-2.0 >= 2.10.0 gdk-pixbuf-2.0 >=
2.10.0 pygtk-2.0 >= 2.10.0)
AC_SUBST(UTILS_CFLAGS)
AC_SUBST(UTILS_LIBS)

PKG_CHECK_MODULES(GLIBTOP, pygtk-2.0 >= 2.10.0 libgtop-2.0 >= 2.10.0)
AC_SUBST(GLIBTOP_CFLAGS)
AC_SUBST(GLIBTOP_LIBS)

PKG_CHECK_MODULES(SVG, pygtk-2.0 >= 2.10.0 gtk+-2.0 >= 2.10.0 librsvg-2.0 >= 2.8.0)
AC_SUBST(SVG_CFLAGS)
AC_SUBST(SVG_LIBS)

PKG_CHECK_MODULES(TILING, pygtk-2.0 >= 2.10.0 gtk+-2.0 >= 2.10.0 gdk-pixbuf-2.0 >= 2.10.0)
AC_SUBST(TILING_CFLAGS)
AC_SUBST(TILING_LIBS)

PKG_CHECK_MODULES(X11, pygtk-2.0 >= 2.10.0 gtk+-2.0 >= 2.10.0 gdk-2.0 >= 2.10.0)
AC_SUBST(X11_CFLAGS)
AC_SUBST(X11_LIBS)

PKG_CHECK_MODULES(SHARED_MIME_INFO, shared-mime-info)
AC_PATH_PROG(UPDATE_MIME_DATABASE, update-mime-database)
AC_PATH_PROG(UPDATE_DESKTOP_DATABASE, update-desktop-database)

ALL_LINGUAS="ar az bg ca cs de dz el en_CA en_GB es eu fi fr gl he hr hu is it ja ko lt lv ms nb ne nl oc pa pl pt pt_BR ru rw sq sr sr@Latn sv tr uk vi zh_CN zh_HK zh_TW"
AC_SUBST(ALL_LINGUAS)
GETTEXT_PACKAGE=gdesklets
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package])
AM_GLIB_GNU_GETTEXT

coredir=${libdir}/gdesklets
AC_SUBST(coredir)

PIXMAPDIR=${datadir}/pixmaps
AC_SUBST(PIXMAPDIR)

localedir=${datadir}/locale
AC_SUBST(localedir)

gnulocaledir=${localedir}
AC_SUBST(gnulocaledir)

AC_OUTPUT([
Controls/ArrayBuffer/Makefile
Controls/Calendar/Makefile
Controls/EventPipe/Makefile
Controls/HDDTemp/Makefile
Controls/Makefile
Controls/Sensor/Makefile
Controls/System/Makefile
Controls/Time/Makefile
Controls/URI/Makefile
Makefile
Sensors/External/Makefile
Sensors/FontSelector/Makefile
Sensors/Makefile
config/Makefile
data/Makefile
display/Makefile
doc/Makefile
doc/man/Makefile
factory/Makefile
layout/Makefile
libdesklets/Makefile
libdesklets/controls/Makefile
libdesklets/system/FreeBSD/Makefile
libdesklets/system/Linux/Makefile
libdesklets/system/Makefile
libdesklets/system/NetBSD/Makefile
libdesklets/system/OpenBSD/Makefile
main/Makefile
plugin/Makefile
po/Makefile.in
scripting/Makefile
sensor/Makefile
shell/Makefile
shell/plugins/ControlBrowser/Makefile
shell/plugins/ControlCollection/Makefile
shell/plugins/ControlsView/Makefile
shell/plugins/DisplayBrowser/Makefile
shell/plugins/DisplayCollection/Makefile
shell/plugins/DisplayView/Makefile
shell/plugins/Help/Makefile
shell/plugins/Makefile
shell/plugins/Menu/Makefile
shell/plugins/PackageInstaller/Makefile
shell/plugins/Profiles/Makefile
shell/plugins/Shell/Makefile
shell/plugins/StatusBar/Makefile
shell/plugins/ViewSwitch/Makefile
shell/plugins/gDeskletsClient/Makefile
utils/Makefile
])


echo "
=============
Configuration
=============

  gDesklets version: ${VERSION}
  Python prefix:     ${PYTHON_PREFIX}
  Python version:    ${PYTHON_VERSION}

  Install location:  ${prefix}
  Enable warnings:   ${set_more_warnings}
  Enable debugging:  ${set_debug}
"
