SUBDIRS = ArrayBuffer \
          EventPipe   \
          Sensor      \
          Time        \
          System      \
          Calendar    \
          HDDTemp     \
          URI

installdir = ${coredir}/Controls
install_DATA = \
	__init__.py

EXTRA_DIST = $(install_DATA)
install_PYTHON = $(install_DATA)

CLEANFILES = *.pyc
