installdir = ${coredir}/config
install_DATA = \
	__init__.py       \
	Backend.py        \
	ConfigBoolean.py  \
	ConfigButton.py   \
	ConfigColor.py    \
	ConfigDate.py      \
	ConfigDPI.py      \
	ConfigEnum.py     \
	ConfigFloat.py    \
	ConfigFont.py     \
	ConfigInfo.py  \
	ConfigInteger.py  \
	ConfigKeyBinding.py \
	ConfigList.py     \
	ConfigRadio.py      \
	ConfigString.py   \
	ConfigTitle.py    \
	ConfigToggle.py    \
	ConfigUnit.py     \
	ConfigURI.py      \
	ConfigDialog.py   \
	ConfigWidget.py   \
	ConfigManager.py  \
	ConfigWidget.py   \
	DaemonConfigger.py  \
	DisplayConfigger.py \
	StateSaver.py     \
	settings.py

install_PYTHON = $(install_DATA)

EXTRA_DIST = $(install_DATA)

CLEANFILES = *.pyc
