installdir = ${coredir}/display
install_DATA = \
	__init__.py            \
	ContainerTarget.py     \
	DataTarget.py          \
	Display.py             \
	DisplayConfigurator.py \
	DisplayTarget.py       \
	Layouter.py            \
	GlassWindow.py         \
	MenuItem.py            \
	Plug.py                \
	TargetAlignment.py     \
	TargetArray.py         \
	TargetBonoboControl.py \
	TargetCanvas.py        \
	TargetDisplay.py       \
	TargetEntry.py         \
	TargetExpander.py      \
	TargetFrame.py         \
	TargetGauge.py         \
	TargetGroup.py         \
	TargetGroup2.py        \
	TargetImage.py         \
	TargetLabel.py         \
	TargetPlotter.py       \
	Window.py              \
	targetregistry.py

EXTRA_DIST = $(install_DATA)
install_PYTHON = $(install_DATA)
CLEANFILES = *.pyc
