installdir = ${coredir}/scripting
install_DATA =          \
  __init__.py           \
  ControlWrapper.py     \
  ElementWrapper.py     \
  PropertyInterface.py  \
  Script.py             \
  Scriptlet.py          \
  Vault.py

EXTRA_DIST = $(install_DATA)
install_PYTHON = $(install_DATA)
CLEANFILES = *.pyc
