installdir = ${coredir}/shell/plugins

SUBDIRS = \
	ControlBrowser     \
	ControlCollection  \
	ControlsView       \
	DisplayBrowser     \
	DisplayCollection  \
	DisplayView        \
	gDeskletsClient    \
	Help               \
	Menu               \
	PackageInstaller   \
	Profiles           \
	Shell              \
	StatusBar          \
	ViewSwitch

CLEANFILES = *.pyc
